# arbitr

./: .dockerignore  .gitignore  ARCHITECTURE_REVIEW.md  Arbitr_document.md  Dockerfile  PROJECT_STATE.md  README.md  bandwidth_test.py  benchmark_worker.py  classify_cases.py  classify_eval.py  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  run_dashboard.py  scrape_parallel.py  scrape_to_dashboard.py  test_insert.py  test_pdf_live.py  test_score.py
configs/: classification.yaml  classification_eval.yaml  main.yaml
configs/areas/: construction.yaml
configs/dictionaries/: closed_case_indicators.txt  document_priorities.yaml  global_reject_keywords.txt  judges.txt
dashboard/: app.py  components.py  seed_data.py
dashboard/views/: _case_detail.py  case_list.py  export.py  ml_review.py  overview.py  pdf_categorization.py  scrape_live.py  search.py
deploy/: .env.example  Dockerfile.dashboard  Dockerfile.orchestrator  Dockerfile.worker  TEST_DEPLOYMENT.md  docker-compose.yml  install-browser.sh  setup_vps.sh  worker@.service
docs/reference/: КОРПОРАТИВНЫЙ.txt  ПОДРЯД.txt
orchestrator/: app.py  config.py
orchestrator/middleware/: __init__.py  auth.py
orchestrator/models/: __init__.py  api_schemas.py
orchestrator/routers/: __init__.py  cases.py  dashboard_api.py  fleet.py  jobs.py  workers.py
scratch/: decoded_challenge.js
scripts/: seed_judges.py
src/: __init__.py
tests/: __init__.py  case_page.html  main_page_html_after_load.html  test_classification_config.py  test_classifier.py  test_config.py  test_context_builder.py  test_filters.py  test_models.py  test_pdf_downloader.py  test_pdf_downloader_priority.py  test_prompt_builder.py  test_stage1_regressions.py  test_stage2.py  test_storage.py
worker/: README.md  block.py  client.py  config.py  main.py  models.py  proxy.py  requirements.txt  scraper.py
(+57 files in other folders)
