[tool.poetry.scripts]
scrape = "scrape_to_dashboard:main"
scrape-parallel = "scrape_parallel:main"
bandwidth-test = "bandwidth_test:main"
dashboard = "run_dashboard:main"

[tool.poetry]
name = "arbitr"
version = "0.1.0"
description = "Система для извлечения и фильтрации релевантных судебных дел с kad.arbitr.ru"
authors = ["Arbitr Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Data models and validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Configuration
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"

# Web scraping
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"


# PDF parsing
pymupdf = "^1.23.0"
pdfplumber = "^0.10.0"

# Data processing
pandas = "^2.1.0"

# Database
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"

# Caching (optional)
redis = "^5.0.1"

# HTTP client
httpx = "^0.25.2"

# LLM integration
openai = "^1.6.0"

# Utilities
fake-useragent = "^1.4.0"
playwright-stealth = "^2.0.1"
streamlit = "^1.55.0"
plotly = "^6.6.0"
streamlit-autorefresh = "^1.0.1"
psutil = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
